# chat_service

./: .env_sample  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: containers.py  main.py  repositories.py  services.py
app/api/: schemas.py
app/api/endpoints/: chats.py  groups.py
app/config/: base.py  env_config.py  settings.py
app/config/env_config/: __init__.py
app/core/: containers.py  managers.py  repositories.py  services.py
app/core/exceptions/: base.py  not_found_exceptions.py
app/db/: models.py
