[tool.poetry]
name = "chat-service"
version = "0.1.0"
description = "Simple chat application based on FastAPI and Websockets"
authors = ["kamilgareev <kamalearningandbusiness@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
alembic = "1.15.1"
annotated-types = "0.7.0"
anyio = "4.9.0"
async-timeout = "5.0.1"
asyncpg = "0.30.0"
dependency-injector = "4.46.0"
exceptiongroup = "1.2.2"
fastapi = "0.115.12"
greenlet = "3.1.1"
idna = "3.10"
mako = "1.3.9"
markupsafe = "3.0.2"
pydantic = "2.10.6"
pydantic-core = "2.27.2"
sniffio = "1.3.1"
sqlalchemy = "2.0.39"
starlette = "0.46.1"
typing-extensions = "4.13.0"
websockets = "15.0.1"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"